# swagger_server/controllers/load_new_post_controller.py
@@ -1,17 +1,16 @@
 import connexion
 import six
-from pymongo import MongoClient
 
 from swagger_server.models.successfull import Successfull  # noqa: E501
 from swagger_server import util
 
 
-def load_new_post(photo, description_post, tag_post, load_data_time=None, file_size=None, file_size_pixels=None, geolocation=None, user_id=None, mac_adress=None, ip_adress=None, file_format=None):  # noqa: E501
+def load_new_post(photo, description_post, tag_post, load_data_time=None, file_size=None, file_size_pixels=None, user_id=None, geolocation=None, file_format=None):  # noqa: E501
     """Loads a new post
 
-    There is description # noqa: E501
+    API for loading a new post to the database # noqa: E501
 
-    :param photo: Photo file in base64(?) format
+    :param photo: Photo file in string format
     :type photo: str
     :param description_post: Atributes of post. Post name is always atribute with index 0.
     :type description_post: List[str]
@@ -23,20 +22,15 @@ def load_new_post(photo, description_post, tag_post, load_data_time=None, file_s
     :type file_size: int
     :param file_size_pixels: Size of the photo file in pixels
     :type file_size_pixels: List[int]
+    :param user_id: Id of the user which has loaded the post
+    :type user_id: int
     :param geolocation: Geolocation of the user
     :type geolocation: str
-    :param user_id: Id of the user
-    :type user_id: str
-    :param mac_adress: MAC-adress of the user device, from which was loaded the post
-    :type mac_adress: str
-    :param ip_adress: IP-adress of the user device, from which was loaded the post
-    :type ip_adress: str
     :param file_format: Format of file like JPEG,PNG,BMP or others
     :type file_format: str
 
     :rtype: Successfull
     """
-
     client = MongoClient('localhost', 27017)
     db = client.database
     posts = db.posts
@@ -61,8 +55,14 @@ def load_new_post(photo, description_post, tag_post, load_data_time=None, file_s
     try:
         result = posts.insert_one(post_data)
     except (Exception,writeConcernError) as ex:
+        del post_data
+        del posts
+        del db
         del client
         return 501
 
+    del post_data
+    del posts
+    del db
     del client
     return 201
