# swagger_server/swagger/swagger.yaml
@@ -4,22 +4,21 @@ info:
   description: CONTENT MANAGEMENT
   contact:
     name: CONTENT MANAGEMENT API
-    email: some_email@gmail.com
   version: 0.1 beta
 servers:
-- url: https://contentmnagement.org/data/2.5/
+- url: /
 paths:
   /Load_new_post:
     post:
       tags:
       - Load new post
       summary: Loads a new post
-      description: There is description
+      description: API for loading a new post to the database
       operationId: load_new_post
       parameters:
       - name: photo
         in: query
-        description: Photo file in base64(?) format
+        description: Photo file in string format
         required: true
         style: form
         explode: true
@@ -71,33 +70,17 @@ paths:
           type: array
           items:
             type: integer
+      - name: user_id
+        in: query
+        description: Id of the user which has loaded the post
+        required: false
+        style: form
+        explode: true
+        schema:
+          type: integer
       - name: geolocation
         in: query
         description: Geolocation of the user
-        required: false
-        style: form
-        explode: true
-        schema:
-          type: string
-      - name: user_id
-        in: query
-        description: Id of the user
-        required: false
-        style: form
-        explode: true
-        schema:
-          type: string
-      - name: MAC_adress
-        in: query
-        description: MAC-adress of the user device, from which was loaded the post
-        required: false
-        style: form
-        explode: true
-        schema:
-          type: string
-      - name: IP_adress
-        in: query
-        description: IP-adress of the user device, from which was loaded the post
         required: false
         style: form
         explode: true
@@ -112,13 +95,15 @@ paths:
         schema:
           type: string
       responses:
-        "200":
+        "201":
           description: Successful loading response, photo added to database
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/Successfull'
-        "404":
+        "500":
+          description: Unable to connect to database
+        "501":
           description: Post wasn't loaded response
           content:
             text/plain:
@@ -133,7 +118,7 @@ paths:
       tags:
       - Delete post
       summary: Delete post
-      description: There is description
+      description: API to delete the post from database
       operationId: delete_post
       parameters:
       - name: post_id
@@ -145,7 +130,7 @@ paths:
         schema:
           type: string
       responses:
-        "200":
+        "201":
           description: Successful deletion response, post deleted from the database
           content:
             text/plain:
@@ -154,7 +139,9 @@ paths:
                 type: string
                 example: Successful deletion response, post deleted from the database
                 x-content-type: text/plain
-        "400":
+        "500":
+          description: Unable to connect to database
+        "501":
           description: Non-existing post_id
           content:
             text/plain:
@@ -189,11 +176,13 @@ paths:
         schema:
           type: integer
       responses:
-        "200":
+        "201":
           description: Corrected sucesfully
-        "300":
-          description: Post with this id doesn't exist
         "500":
+          description: Unable to connect to database
+        "501":
+          description: Post with this id doesn't exist
+        "502":
           description: Atribute with this index doesn't exist
       x-openapi-router-controller: swagger_server.controllers.edit_post_controller
   /Get_post_atributes:
@@ -214,13 +203,15 @@ paths:
         schema:
           type: string
       responses:
-        "200":
+        "201":
           description: Indexes returned sucesfully
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/Successfull_1'
-        "300":
+        "500":
+          description: Unable to connect to database
+        "501":
           description: Post with this id doesn't exist
       x-openapi-router-controller: swagger_server.controllers.get_post_atributes_controller
   /Get_post:
@@ -240,28 +231,23 @@ paths:
         schema:
           type: string
       responses:
-        "200":
+        "201":
           description: Post got succesfully
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/Successfull_2'
-        "400":
+        "500":
+          description: Unable to connect to database
+        "501":
           description: Post id doesn't exist
-          content:
-            text/plain:
-              schema:
-                title: Post id doesn't exist
-                type: string
-                example: Post id doesn't exist
-                x-content-type: text/plain
       x-openapi-router-controller: swagger_server.controllers.get_post_controller
   /Get_metadata_post:
     get:
       tags:
       - Get metadata post
       summary: Get metadata post
-      description: There is description
+      description: API to get the metadata of the post
       operationId: get_metadata_post
       parameters:
       - name: Post_ID
@@ -273,21 +259,16 @@ paths:
         schema:
           type: string
       responses:
-        "200":
+        "201":
           description: Metadata received
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/Successfull_3'
-        "400":
+        "500":
+          description: Unable to connect to database
+        "501":
           description: Post id doesn't exist
-          content:
-            text/plain:
-              schema:
-                title: Post id doesn't exist
-                type: string
-                example: Post id doesn't exist
-                x-content-type: text/plain
       x-openapi-router-controller: swagger_server.controllers.get_metadata_post_controller
 components:
   schemas:
@@ -341,10 +322,6 @@ components:
           type: string
         user_id:
           type: string
-        MAC-adress:
-          type: string
-        IP-adress:
-          type: string
         File_format:
           type: string
         Result:
@@ -356,9 +333,7 @@ components:
         user_id: user_id
         load_data_time: load_data_time
         File_format: File_format
-        IP-adress: IP-adress
         file_size: file_size
-        MAC-adress: MAC-adress
         geolocation: geolocation
         Result: true
 
